@@ -148,6 +148,7 @@ class LuaUnsyncedCtrl {
 		static int SetBuildSpacing(lua_State* L);
 		static int SetBuildFacing(lua_State* L);
 
+		static int SetAtmosphere(lua_State* L);
 		static int SetSunLighting(lua_State* L);
 		static int SetSunParameters(lua_State* L);
 		static int SetSunManualControl(lua_State* L);
