@@ -305,7 +305,7 @@ void CAdvWater::UpdateWater(CGame* game)
 
 
 	reflectFBO.Bind();
-	glClearColor(mapInfo->atmosphere.fogColor[0], mapInfo->atmosphere.fogColor[1], mapInfo->atmosphere.fogColor[2], 1.0f);
+	glClearColor(sky->fogColor[0], sky->fogColor[1], sky->fogColor[2], 1.0f);
 	glClear(GL_COLOR_BUFFER_BIT | GL_DEPTH_BUFFER_BIT);
 
 	const double clipPlaneEq[4] = {0.0, 1.0, 0.0, 0.0};
