@@ -355,7 +355,7 @@ void CBasicTreeDrawer::Draw(float treeDistance, bool drawReflection)
 	glEnable(GL_TEXTURE_2D);
 	glEnable(GL_ALPHA_TEST);
 
-	ISky::SetupFog();
+	sky->SetupFog();
 	glColor4f(1, 1, 1, 1);
 
 	const int cx = (int)(camera->GetPos().x / (SQUARE_SIZE * TREE_SQUARE_SIZE));
