@@ -290,7 +290,7 @@ void CFarTextureHandler::Draw()
 		glColor4f(1.0f, 1.0f, 1.0f, 1.0f);
 		glNormal3fv((const GLfloat*) &unitDrawer->camNorm.x);
 
-		ISky::SetupFog();
+		sky->SetupFog();
 
 		CVertexArray* va = GetVertexArray();
 		va->Initialize();
